# hacs-platformatics

./: .gitignore  README.md  hacs.json  pyproject.toml
.claude/: settings.local.json
custom_components/platformatics/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json  sensor.py  strings.json
docs/superpowers/plans/: 2026-04-23-platformatics-ha-integration.md
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_light.py  test_sensor.py
