[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[project]
name = "hacs-platformatics"
version = "1.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "aiohttp",
    "aioresponses",
]
